image compress with sharp and upload it to cloudinary

--- a/.env_example
+++ b/.env_example
@@ -4,4 +4,10 @@ DB_PASS=
 DB_NAME=olp
 DB_HOST=localhost
 DB_DIALEC=mysql
+JWT_KEY=
+ENCRYPT_KEY=
+JWT_EXP=1h
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 saltRounds = 10
