create admin route middleware

--- a/.env_example
+++ b/.env_example
@@ -1,13 +1,17 @@
-APP_PORT=3000
-DB_USER=root
-DB_PASS=
-DB_NAME=olp
-DB_HOST=localhost
-DB_DIALEC=mysql
+APP_PORT=
+DB_USER=
+DB_PASS
+DB_NAME=
+DB_HOST=
+DB_DIALEC=
+
 JWT_KEY=
+JWT_EXP=
+
 ENCRYPT_KEY=
-JWT_EXP=1h
+
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
-saltRounds = 10
+
+saltRounds =
